# algorithms-data-structures

./: CMakeLists.txt
1.0/: 1a.cpp  1b.cpp  1d.cpp  1g.cpp  CMakeLists.txt
aads 3 semester/: CMakeLists.txt
aads 3 semester/10hw/: 10-1.cpp  10-2.cpp  10-3.cpp  CmakeLists.txt
aads 3 semester/1hw/: 2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt
aads 3 semester/2hw/: 2-1.cpp  2-10.cpp  2-2.cpp  2-3.cpp  2-4.cpp  2-5.cpp  2-6.cpp  2-7.cpp  2-8.cpp  2-9.cpp  CMakeLists.txt
aads 3 semester/3hw/: 3-1.cpp  3-10.cpp  3-2.cpp  3-3.cpp  3-4.cpp  3-5.cpp  3-7.cpp  3-8.cpp  3-9.cpp  CMakeLists.txt
aads 3 semester/4hw/: 4-1.cpp  4-10.cpp  4-3.cpp  4-4.cpp  4-5.cpp  4-6.cpp  4-7.cpp  4-8.cpp  4-9.cpp  CMakeLists.txt
aads 3 semester/5hw/: 5-1.cpp  5-10.cpp  5-2.cpp  5-3.cpp  5-4.cpp  5-6.cpp  5-7.cpp  5-8.cpp  5-9.cpp  CMakeLists.txt
aads 3 semester/6-7hw/: 67-1.cpp  67-10.cpp  67-11.cpp  67-12.cpp  67-13.cpp  67-14.cpp  67-15.cpp  67-2.cpp  67-3.cpp  67-4.cpp  67-5.cpp  67-6.cpp  67-7.cpp  67-8.cpp  67-9.cpp  CMakeLists.txt
aads 3 semester/8hw/: 8-1.cpp  8-2.cpp  8-3.cpp  8-5.cpp  CMakeLists.txt
aads 3 semester/9hw/: 9-1.cpp  9-2.cpp  9-3.cpp  9-4.cpp  9-5.cpp  9-6.cpp  9-7.cpp  9-8.cpp  CMakeLists.txt
aads 3 semester/lectures/: 2l.cpp  CMakeLists.txt  annealing.cpp  annealing2.cpp  backpack_enum.cpp  backpack_smthelse.cpp  bds_1.cpp  bds_2.cpp  binsearch1.cpp  binsearch2.cpp  binsearch_vector.cpp  cows.cpp  dp_nvp_easy.cpp  dp_nvp_optimized.cpp  heap.cpp  rmq.cpp  stack.cpp  test.cpp  well.cpp  whatever.cpp
aads 4 semester/: CMakeLists.txt
aads 4 semester/1hw/: 1-2.cpp  1-3.cpp  1-4.cpp  1-5.cpp  1-6.cpp  1-7.cpp  1-8.cpp  1-9.cpp  CMakeLists.txt
aads 4 semester/2hw/: 2-1.cpp  2-2.cpp  2-3.cpp  2-4.cpp  2-5.cpp  2-51.cpp  2-6.cpp  CMakeLists.txt
aads 4 semester/34hw/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp
aads 4 semester/5hw/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp
aads 4 semester/6hw/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
aads 4 semester/7hw/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  o.cpp  p.cpp  q.cpp  s.cpp  t.cpp
aads 4 semester/8hw/: CMakeLists.txt  a.cpp  b.cpp
aads 4 semester/lectures/: 01-1.cpp  01-2.cpp  02-1.cpp  03-1.cpp  04-1.cpp  05-1.cpp  06-1.cpp  06-2.cpp  07-1.cpp  08-1.cpp  09-1.cpp  CMakeLists.txt
graphs 4 semester/: CMakeLists.txt
graphs 4 semester/1hw/: 1-1.cpp  1-2.cpp  1-3.cpp  1-4.cpp  1-5.cpp  CMakeLists.txt
graphs 4 semester/2hw/: 2-1.cpp  2-2.cpp  2-3.cpp  2-4.cpp  2-5.cpp  2-6.cpp  2-7.cpp  CMakeLists.txt
graphs 4 semester/3hw/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  help.cpp
graphs 4 semester/4hw/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp
graphs 4 semester/5hw/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  g.cpp  h.cpp
graphs 4 semester/6hw/: CMakeLists.txt  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp
graphs 4 semester/7hw/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp
graphs 4 semester/8hw/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  z.cpp
graphs 4 semester/9hw/: CMakeLists.txt  a.cpp  avl.cpp  b.cpp  c.cpp
graphs 4 semester/lectures/: CmakeLists.txt  g01-2.cpp  g01-3.cpp  g03-1.cpp  g03-2.cpp  g03-3.cpp  g03-4.cpp  g04-1.cpp  g04-2.cpp  g04-3.cpp  g05-1.cpp  g05-2.cpp  g05-3.cpp  g05-4.cpp  g05-5.cpp
graphs 5 semester/: CMakeLists.txt
graphs 5 semester/1hw/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp
graphs 5 semester/lectures/: 1909-1.cpp  1909-2.cpp  CMakeLists.txt
yandex_trainings/: CMakeLists.txt
(+7 files in other folders)
