add_executable(67-1 67-1.cpp)
add_executable(67-2 67-2.cpp)
add_executable(67-3 67-3.cpp)
add_executable(67-4 67-4.cpp)
add_executable(67-5 67-5.cpp)
add_executable(67-9 67-9.cpp)
add_executable(67-6 67-6.cpp)
add_executable(67-7 67-7.cpp)
add_executable(67-11 67-11.cpp)
add_executable(67-10 67-10.cpp)
add_executable(67-12 67-12.cpp)
add_executable(67-8 67-8.cpp)
add_executable(67-13 67-13.cpp)
add_executable(67-14 67-14.cpp)