add_executable(whatever whatever.cpp)
add_executable(2l 2l.cpp)
add_executable(well well.cpp)
add_executable(binsearch1 binsearch1.cpp)
add_executable(binsearch2 binsearch2.cpp)
add_executable(binsearch_vector binsearch_vector.cpp)
add_executable(cows cows.cpp)
add_executable(backpack_enum backpack_enum.cpp)
add_executable(backpack_smthelse backpack_smthelse.cpp)
add_executable(dp_nvp_easy dp_nvp_easy.cpp)
add_executable(dp_nvp_optimized dp_nvp_optimized.cpp)
add_executable(stack stack.cpp)
add_executable(annealing annealing.cpp)
add_executable(annealing2 annealing2.cpp)
add_executable(test test.cpp)
add_executable(rmq rmq.cpp)
add_executable(heap heap.cpp)
add_executable(bds_1 bds_1.cpp)
add_executable(bds_2 bds_2.cpp)