add_executable(45-g g.cpp)
add_executable(45-i i.cpp)
add_executable(45-j j.cpp)
add_executable(45-l l.cpp)
add_executable(45-m m.cpp)
add_executable(45-b b.cpp)
add_executable(45-c c.cpp)
add_executable(45-d d.cpp)
add_executable(45-a a.cpp)
add_executable(45-f f.cpp)
add_executable(45-e e.cpp)
add_executable(45-h h.cpp)
