add_executable(47-a a.cpp)
add_executable(47-b b.cpp)
add_executable(47-c c.cpp)
add_executable(47-g g.cpp)
add_executable(47-i i.cpp)
add_executable(47-j j.cpp)
add_executable(47-k k.cpp)
add_executable(47-h h.cpp)
add_executable(47-d d.cpp)
add_executable(47-e e.cpp)
add_executable(47-f f.cpp)
add_executable(47-t t.cpp)
add_executable(47-o o.cpp)
add_executable(47-p p.cpp)
add_executable(47-q q.cpp)
add_executable(47-l l.cpp)
add_executable(47-s s.cpp)