add_executable(01-1 01-1.cpp)
add_executable(01-2 01-2.cpp)
add_executable(02-1 02-1.cpp)
add_executable(03-1 03-1.cpp)
add_executable(04-1 04-1.cpp)
add_executable(05-1 05-1.cpp)
add_executable(06-1 06-1.cpp)
#add_executable(06-2 06-2.cpp)
#add_executable(07-1 07-1.cpp)
add_executable(08-1 08-1.cpp)